finish books Swagger Controller
