# app/v1/Http/Controllers/BookController.php
@@ -11,26 +11,41 @@ use Symfony\Component\HttpFoundation\Response;
 class BookController extends Controller
 {
 
-#[OA\Get(
-    path: "/books",
-    summary: "List all books",
-    security: [
-        [
-            'bearerAuth' => []
-        ]
-    ],
-    tags: ["Admin"],
-    responses: [
-        new OA\Response(response: Response::HTTP_OK, description: "users retrieved success"),
-        new OA\Response(response: Response::HTTP_UNAUTHORIZED, description: "Unauthorized"),
-        new OA\Response(response: Response::HTTP_NOT_FOUND, description: "not found"),
-        new OA\Response(response: Response::HTTP_INTERNAL_SERVER_ERROR, description: "Server Error")
-    ]
-)]
-    public function index()
+    /**
+     * @OA\Get(
+     *    path="/books",
+     *    operationId="index",
+     *    tags={"Books"},
+     *    summary="Get list of books",
+     *    description="Get list of books",
+     *     @OA\Parameter(name="limit", in="query", description="limit", required=false,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Parameter(name="page", in="query", description="the page number", required=false,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Parameter(name="order", in="query", description="order by title 'asc' or 'desc'", required=false,
+     *         @OA\Schema(type="string")
+     *     ),
+     *
+     *     @OA\Response(response=200, description="Successful operation",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="status", type="integer", example="200"),
+     *             @OA\Property(property="data",type="object"),
+     *         )
+     *     ),
+     * )
+     */
+
+    public function allBooks(Request $request)
     {
+        $limit = $request->limit ?: 15;
+        $order = $request->order == 'asc' ? 'asc' : 'desc';
         try {
-            $posts = Book::all();
+            $books = Book::orderBy('title', $order)
+                ->select('id', 'title', 'author', 'year', 'description')
+                ->where('isActive', 1)
+                ->paginate($limit);
         } catch (Exception $e) {
             return response()->json([
                 'data' => [],
@@ -39,24 +54,37 @@ class BookController extends Controller
         }
 
         return response()->json([
-            'data' => $posts,
+            'data' => $books,
             'message' => 'Succeed'
         ], Response::HTTP_OK);
     }
 
     /**
      * @OA\Get(
-     *     path="/api/books/{id}",
-     *     summary="Show a book",
-     *     tags={"Book"},
-     *     @OA\Response(response=200, description="Successful operation"),
-     *     @OA\Response(response=400, description="Invalid request")
+     *    path="/books/{id}",
+     *    operationId="show",
+     *    tags={"Books"},
+     *    summary="Get Book Detail",
+     *    description="Get Book Detail",
+     *    @OA\Parameter(name="id", in="path", description="Id of Book", required=true,
+     *        @OA\Schema(type="integer")
+     *    ),
+     *     @OA\Response(
+     *          response=200, description="Success",
+     *          @OA\JsonContent(
+     *          @OA\Property(property="status", type="integer", example="200"),
+     *          @OA\Property(property="data",type="object")
+     *          )
+     *     )
      * )
      */
-    public function show($id)
+    public function getBook($id)
     {
         try {
-            $posts = Book::find($id);
+            $book = Book::find($id);
+            if ($book === null) {
+                return response([], 404);
+            }
         } catch (Exception $e) {
             return response()->json([
                 'data' => [],
@@ -65,41 +93,44 @@ class BookController extends Controller
         }
 
         return response()->json([
-            'data' => $posts,
+            'data' => $book,
             'message' => 'Succeed'
         ], Response::HTTP_OK);
     }
 
-    #[OA\Post(
-        path: "/books",
-        summary: "Create Book",
-        security: [
-            [
-                'bearerAuth' => []
-            ]
-        ],
-        requestBody: new OA\RequestBody(required: true,
-            content: new OA\MediaType(mediaType: "application/x-www-form-urlencoded",
-                schema: new OA\Schema(required: ["title", "author", "year", "description"],
-                    properties: [
-                        new OA\Property(property: 'title', description: "Book title", type: "string"),
-                        new OA\Property(property: 'author', description: "Author", type: "string"),
-                        new OA\Property(property: 'year', description: "Year", type: "string"),
-                        new OA\Property(property: 'description', description: "Short description", type: "string"),
-                        ]
-                ))),
-        tags: ["Admin"],
-        responses: [
-            new OA\Response(response: Response::HTTP_CREATED, description: "Register Successfully"),
-            new OA\Response(response: Response::HTTP_UNPROCESSABLE_ENTITY, description: "Unprocessable entity"),
-            new OA\Response(response: Response::HTTP_BAD_REQUEST, description: "Bad Request"),
-            new OA\Response(response: Response::HTTP_INTERNAL_SERVER_ERROR, description: "Server Error")
-        ]
-    )]
-    public function store(Request $request)
+    /**
+     * @OA\Post(
+     *      path="/books",
+     *      operationId="store",
+     *      tags={"Books"},
+     *      summary="Store book in DB",
+     *      description="Store book in DB",
+     *      @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *            required={"title", "author", "year", "description"},
+     *            @OA\Property(property="title", type="string", format="string", example="Harry Potter"),
+     *            @OA\Property(property="author", type="string", format="string", example="Sergey Abraztsou"),
+     *            @OA\Property(property="year", type="string", format="string", example="1988"),
+     *            @OA\Property(property="description", type="string", format="string", example="Cool Story ab'ut love and magic!"),
+     *         ),
+     *      ),
+     *      @OA\Response(
+     *          response=200, description="Success",
+     *          @OA\JsonContent(
+     *             @OA\Property(property="status", type="integer", example="200"),
+     *             @OA\Property(property="data",type="object")
+     *          )
+     *     )
+     * )
+     */
+    public function createBook(Request $request)
     {
         try {
-            $posts = Book::create($request->all());
+            $book = Book::create($request->all());
+            if (!$book) {
+                return response([], 400);
+            }
         } catch (Exception $e) {
             return response()->json([
                 'data' => [],
@@ -108,16 +139,48 @@ class BookController extends Controller
         }
 
         return response()->json([
-            'data' => $posts,
+            'data' => $book,
             'message' => 'Succeed'
         ], Response::HTTP_OK);
     }
 
-    public function update(Request $request, $id)
+    /**
+     * @OA\Put(
+     *      path="/books/{id}",
+     *      operationId="update",
+     *      tags={"Books"},
+     *      summary="Update article in DB",
+     *      description="Update article in DB",
+     *      @OA\Parameter(name="id", in="path", description="Id of Book", required=true,
+     *          @OA\Schema(type="integer")
+     *      ),
+     *      @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *            required={"title", "author", "year", "description"},
+     *            @OA\Property(property="title", type="string", format="string", example="Harry Potter"),
+     *            @OA\Property(property="author", type="string", format="string", example="Sergey Abraztsou"),
+     *            @OA\Property(property="year", type="string", format="string", example="1988"),
+     *            @OA\Property(property="description", type="string", format="string", example="Cool Story ab'ut love and magic!"),
+     *         ),
+     *      ),
+     *      @OA\Response(
+     *           response=200, description="Success",
+     *           @OA\JsonContent(
+     *              @OA\Property(property="status", type="integer", example="200"),
+     *              @OA\Property(property="data",type="object")
+     *           )
+     *      )
+     * )
+     */
+    public function updateBook(Request $request, $id)
     {
         try {
-            $posts = Book::find($id)
-                ->update($request->all());
+            $book = Book::find($id);
+            if ($book === null) {
+                return response([], 400);
+            }
+            $book->update($request->all());
         } catch (Exception $e) {
             return response()->json([
                 'data' => [],
@@ -126,15 +189,43 @@ class BookController extends Controller
         }
 
         return response()->json([
-            'data' => $posts,
+            'data' => $book,
             'message' => 'Succeed'
         ], Response::HTTP_OK);
     }
 
-    public function destroy($id)
+    /**
+     * @OA\Delete(
+     *     path="/books/{id}",
+     *     summary="Delete a book",
+     *     tags={"Books"},
+     *     @OA\Parameter(
+     *          name="id",
+     *          in="path",
+     *          description="id that to be updated isDelete = 1",
+     *          required=true,
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *           response=200, description="Success",
+     *           @OA\JsonContent(
+     *              @OA\Property(property="status", type="integer", example="200"),
+     *              @OA\Property(property="data",type="object")
+     *           )
+     *      )
+     * )
+     */
+    public function deleteBook($id)
     {
         try {
-            $posts = Book::destroy($id);
+            $book = Book::find($id);
+            if ($book === null) {
+                return response([], 400);
+            }
+            $book->isDeleted = 1;
+            $book->save();
         } catch (Exception $e) {
             return response()->json([
                 'data' => [],
@@ -143,7 +234,7 @@ class BookController extends Controller
         }
 
         return response()->json([
-            'data' => $posts,
+            'data' => $book,
             'message' => 'Succeed'
         ], Response::HTTP_OK);
     }
