# routes/v1/books.php
@@ -3,9 +3,9 @@
 use App\v1\Http\Controllers\BookController;
 use Illuminate\Support\Facades\Route;
 
-Route::get('/', [BookController::class, 'index']);
-Route::get('/{id}', [BookController::class, 'show']);
-Route::post('/', [BookController::class, 'store']);
-Route::put('/{id}', [BookController::class, 'update']);
-Route::delete('/{id}', [BookController::class, 'destroy']);
+Route::get('/', [BookController::class, 'allBooks']);
+Route::get('/{id}', [BookController::class, 'getBook']);
+Route::post('/', [BookController::class, 'createBook']);
+Route::put('/{id}', [BookController::class, 'updateBook']);
+Route::delete('/{id}', [BookController::class, 'deleteBook']);
 
